<resources>
    <string name="app_name">Hello World</string>

    <string name="hello_world">Hello Again!</string>
    <string name="action_settings">Settings</string>
    <string name="button_1_text">You Clicked</string>
    <string name="click_button_1_text">You Clicked</string>
    <string name="users_name_edit_text">Inner-Inner Your Name</string>
    <string name="happy_question">Are You Happy</string>
    <string name="answer_yes">Inner Button Yes</string>
    <string name="answer_no">Inner Button No</string>
    <string name="button_yes_hint">Yes?</string>
    <string name="button_no_hint">No?</string>

</resources>
