<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff000000"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:textSize="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#fffdfffb"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_question"
        android:textSize="20sp"
        android:textColor="#fffdfffb"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes"
            android:hint="@string/button_yes_hint"
            android:onClick="onYesButtonClick"/>

        <Button
            android:id="@+id/answer_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no"
            android:hint="@string/button_no_hint"
            android:onClick="onNoButtonClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/users_name_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:textColor="#fffdfffb"
            android:hint="@string/users_name_edit_text"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1_text"
        android:id="@+id/firstButton"
        android:layout_below="@+id/textView"
        android:background="@drawable/testbuttonimage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
         />

</LinearLayout>
